# confident-client

./: .gitignore  README.md
python/: README.md  ROUTES.md  pyproject.toml
python/confidentai/: __init__.py  api.py  client.py  types.py
python/confidentai/organization/: __init__.py  client.py  types.py
python/confidentai/organization/api_keys/: __init__.py  resource.py  types.py
python/confidentai/organization/governance/: __init__.py  client.py
python/confidentai/organization/governance/policies/: __init__.py  resource.py  types.py
python/confidentai/organization/iam/: __init__.py  client.py
python/confidentai/organization/iam/permissions/: __init__.py  (+1 more)
python/confidentai/organization/invitations/: __init__.py  resource.py  types.py
python/confidentai/organization/members/: __init__.py  resource.py  types.py
python/confidentai/organization/permissions/: __init__.py  resource.py  types.py
python/confidentai/organization/policies/: __init__.py  resource.py  types.py
python/confidentai/organization/roles/: resource.py
python/confidentai/projects/: __init__.py  client.py  types.py
python/confidentai/projects/api_keys/: __init__.py  resource.py
python/confidentai/projects/iam/: __init__.py  client.py
python/confidentai/projects/invitations/: __init__.py  resource.py  types.py
python/confidentai/projects/members/: __init__.py  resource.py
python/confidentai/projects/permissions/: __init__.py  resource.py
python/confidentai/projects/policies/: __init__.py  resource.py
python/confidentai/projects/roles/: __init__.py  resource.py  types.py
python/confidentai/utils/: __init__.py  request.py  validation.py
python/tests/: conftest.py  test_api_client.py  test_async_client.py  test_client.py  test_errors.py  test_imports.py  test_organization_client.py  test_project_client.py  test_routes.py
python/tests/integration/: conftest.py  test_live_smoke.py
(+82 files in other folders)
